# AIComps

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
AIComps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
comps/: README.md  pdf-dataprep.py
comps/cores/proto/: api_protocol.py  docarray.py
comps/dataprep/: README.md
comps/dataprep/deployment/docker_compose/: compose.yaml
comps/dataprep/src/: Dockerfile  README.md  README_qdrant.md  opea_dataprep_loader.py  opea_dataprep_microservice.py  requirements-cpu.txt  utils.py
comps/dataprep/src/integrations/: qdrant.py
comps/dataprep/src/uploaded_files/: output.json
comps/groq/: README.md  main.py  requirements.txt
comps/pdf-parser/: Dockerfile  README.md  attention_output.json  client.py  docker-compose.yml  docker-entrypoint.sh  format_response.py  main.py  requirements.txt  test.ipynb
comps/retrievers/: README.md
comps/retrievers/src/: .dockerignore  Dockerfile  README.md  requirements-cpu.txt
comps/retrievers/src/integrations/: qdrant.py
comps/vector-store/: Dockerfile.api  Dockerfile.cleanup  README.md  main.py  requirements.txt
comps/vector-store/app/: app.py  requirements.txt
comps/vector-store/cleanup/: cleanup.py
comps/vector-store/manifests/: 01-namespace.yaml  02-rbac.yaml  03-api.yaml  04-cronjob.yaml
input-handlers/: README.md
input-handlers/pdf/parser/: .dockerignore  .env.example  API_README.md  Dockerfile  README.md  SERVER_README.md  client.py  docker-compose.yml  format_response.py  server.py
input-handlers/pdf/viewer/: .gitignore  README-dev.md  README.md
input-handlers/pdf/viewer/backend/: .dockerignore  Dockerfile  init.sh  package.json  setup-permissions.sh  test-api.sh  tsconfig.json
input-handlers/pdf/viewer/backend/src/: server.ts
input-handlers/pdf/viewer/backend/src/config/: database.ts  paths.ts
input-handlers/pdf/viewer/backend/src/middleware/: auth.ts  errorHandler.ts
input-handlers/pdf/viewer/backend/src/models/: Document.ts  Session.ts  User.ts  UserGroup.ts
input-handlers/pdf/viewer/backend/src/routes/: adminRoutes.ts  authRoutes.ts  documentRoutes.ts
input-handlers/pdf/viewer/backend/src/scripts/: initAdmin.ts  initDocumentPermissions.ts
input-handlers/pdf/viewer/backend/src/services/: authService.ts  documentService.ts  userManagementService.ts
input-handlers/pdf/viewer/backend/src/types/: auth.ts  document.ts
input-handlers/pdf/viewer/frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package.json
input-handlers/pdf/viewer/frontend/app/: globals.css  layout.tsx  page.tsx
input-handlers/pdf/viewer/frontend/app/admin/: page.tsx
input-handlers/pdf/viewer/frontend/app/dashboard/: loading.tsx  page.tsx
input-handlers/pdf/viewer/frontend/app/login/: page.tsx
input-handlers/pdf/viewer/frontend/app/settings/: page.tsx
input-handlers/pdf/viewer/frontend/app/view/: layout.tsx  page.tsx
input-handlers/pdf/viewer/frontend/components/: ProtectedRoute.tsx  UserMenu.tsx
input-handlers/pdf/viewer/frontend/contexts/: AuthContext.tsx
input-handlers/pdf/viewer/frontend/lib/: api.ts
input-handlers/pdf/viewer/frontend/types/: auth.ts  document.ts
input-handlers/pdf/viewer/install/: .env.example  build.sh  docker-compose.yaml
model-serving/: README.md
model-serving/groq/: Dockerfile  README.md  main.py
model-serving/ollama/: README.md
model-serving/vLLM/: README.md
model-serving/vLLM/docker/: README.md
model-serving/vLLM/from_source/: README.md
models/: README.md
models/embeddings/: README.md
models/embeddings/src/: Dockerfile  opea_embedding_microservice.py  opea_multimodal_embedding_microservice.py
models/embeddings/src/README/: README_clip.md  README_ovms.md  README_tei.md
models/embeddings/src/integrations/: clip.py  multimodal_bridgetower.py  ovms.py  tei.py
models/rerankings/: README.md
models/rerankings/src/: Dockerfile  README_ovms.md  README_tei.md  opea_reranking_microservice.py
models/rerankings/src/integrations/: ovms.py  tei.py  videoqna.py
summarization/: .gitignore
summarization/deployment/docker/: docker-compose.yaml
summarization/src/: README.md  main.py
tagging/src/: .env.example  README.md  main.py  requirements.txt
tasks/: README.md  __init__.py
tasks/cores/mcp/: client.py  manager.py
tasks/cores/mega/: http_service.py  utils.py
tasks/speech/asr/Wav2vec2/: .env.example  README.md  main.py  model_runner.py  models.py  pyproject.toml  utilities.py
tasks/speech/text2speech/fastspeech2_HS/: Dockerfile  README.md  main.py  model_runner.py  models.py  pyproject.toml  setup.sh  utilities.py
tasks/speech/text2speech/svara/: README.md
tasks/speech/translation/IndicTrans2/: Dockerfile  README.md  core.py  main.py  models.py  pyproject.toml
tasks/text/dataprep/: README.md
tasks/text/dataprep/src/: Dockerfile  README.dev.md  README.md  env.sh  opea_dataprep_loader.py  opea_dataprep_microservice.py  requirements-cpu.txt  requirements.txt  utils.py
tasks/text/dataprep/src/integrations/: qdrant.py
tasks/text/retrievers/deployment/docker_compose/: compose.yaml
tasks/text/retrievers/src/: Dockerfile  README.dev.md  README.md  opea_retrievers_microservice.py
tasks/text/retrievers/src/integrations/: config.py  qdrant.py
tasks/text/summarization/src/: Dockerfile  README.md
tasks/text/tagging/deployment/docker/: docker-compose.yaml
tasks/text/tagging/src/: README.md  main.py
