[project]
name = "wav2vec2"
version = "0.1.0"
description = "API endpoint for Wav2Vec2 ASR model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "espnet>=202511",
    "fairseq",
    "fastapi>=0.124.4",
    "indic-num2words>=1.3.2",
    "indic-unified-parser>=1.0.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "noisereduce>=3.0.3",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "torch==2.8.0",
    "uvicorn>=0.38.0",
    "torchaudio==2.8.0",
    "python-multipart>=0.0.20",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchaudio = [
  { index = "pytorch-cpu" },
]

fairseq = { git = "https://github.com/liyaodev/fairseq.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


